fix vimeo video sizing and fix hero text spacing

--- a/assets/styles/partials/hero-banner.scss
+++ b/assets/styles/partials/hero-banner.scss
@@ -12,6 +12,12 @@
     .image-overlay {
         background-image: linear-gradient()
     }
+    .hero-text {
+        max-width: 50%;
+        @media(max-width: $desktop){
+            max-width: 100%;
+        }
+    }
     .hero-content {
         font-size: 1.5rem;
         margin-top: 6rem;
